--- a/index.css
+++ b/index.css
@@ -4,22 +4,27 @@
 	margin: 0;
 	padding: 0;
 }
-
 body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Montserrat", sans-serif;
+}
+.bg{
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	z-index: -1;
 }
 
 .title {
-  width: 100vw;
+  width: 100%;
   height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-content: center;
+  /* align-content: center; */
   flex-wrap: wrap;
 }
 
@@ -45,7 +50,8 @@ body{
     width: 100vw;
   }
   .black-lives-matter p {
-    font-size: 8rem;
+    font-size: 130px;
+    /* font-size: 8rem; */
   }
   .title .text-bottom p{
     font-size: 30px;
@@ -63,14 +69,22 @@ body{
   to {
     background-size: 100%;
   }
-
 }
+/* @keyframes zoomout {
+	0% {
+	  background-size: 10%;
+	  font-size: 70vw;
+	}
+	50%{
+		font-size: 20vw;
+  
+	}
+	70% {
+	  background-size: 100%;
+	}
+  
+  } */
 
-
-@keyframes showTopText {
-  0% { transform: translate3d(0, 100%, 0); }
-  100% { transform: translate3d(0, 0, 0); }
-}
 @keyframes showBottomText {
   0% { transform: translate3d(0, -100%, 0); }
   100% { transform: translate3d(0, 0, 0); }
@@ -111,6 +125,7 @@ body{
   animation-delay: 6.5s;
   animation: showBottomText 3s;
   height: 10vh;
+  width: 100vw;
   /* animation-delay: 6.5s; */
 }
 
@@ -194,6 +209,12 @@ ul li a:hover::after {
 	padding-top: calc(var(--index) * var(--card-top-offset));
 }
 
+#about{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 @supports (animation-timeline: works) {
 
 	@scroll-timeline cards-element-scrolls-in-body {
@@ -239,13 +260,6 @@ ul li a:hover::after {
 }
 
 /** PAGE STYLING **/
-
-body {
-	/* color: rgb(255, 255, 255); */
-	/* text-align: center; */
-	/* font-size: calc(1em + 0.5vw); */
-}
-
 header,
 main {
 	width: 80vw;
@@ -269,8 +283,11 @@ header {
 }
 
 .card {
+	width : 70%;
+	height : 70%;
 	outline: var(--outline-width) solid hotpink;
 }
+
 
 .card__content {
 	box-shadow: 0 0.2em 1em rgba(0, 0, 0, 0.1), 0 1em 2em rgba(0, 0, 0, 0.1);
@@ -278,11 +295,12 @@ header {
 	color: rgb(10, 5, 7);
 	border-radius: 1em;
 	overflow: hidden;
-
-	display: grid;
-	grid-template-areas: "text img";
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto;
+	
+	/* display: grid; */
+	display: flex;
+	/* grid-template-areas: "text img"; */
+	/* grid-template-columns: 1fr 1fr; */
+	/* grid-template-rows: auto; */
 
 	align-items: stretch;
 	outline: var(--outline-width) solid lime;
@@ -290,13 +308,14 @@ header {
 
 .card__content > div {
 	grid-area: text;
-	width: 80%;
+	width: 100%;
 	place-self: center;
 	text-align: left;
 
 	display: grid;
 	gap: 1em;
 	place-items: start;
+	padding: 30px;
 }
 
 .card__content > figure {
@@ -343,4 +362,219 @@ aside {
 
 aside p {
 	margin-bottom: 1em;
+}
+
+@media only screen and (max-width: 600px){
+	.card {
+		width : 100%;
+		/* height : 30vh; */
+		outline: var(--outline-width) solid hotpink;
+	}
+	.card__content > div{
+		/* height : 30vh; */
+		display: flex;
+		flex-direction: column;
+		padding: 10px;
+	}
+	.card__content > div > p{
+		font-size: 1rem;
+	}
+	.card__content > div > h2{
+		font-size: 2rem;
+	}
+	.card__content > figure{
+		display: none;
+	}
+	.header{
+		display: none;
+	}
+	.ham{
+		display: inline-block;
+	}
+}
+
+
+/* //////////////////////////////////////////////////////////////////////// */
+
+/* Basic Styles */
+  a {
+	text-decoration: none;
+  }
+  .ham {
+	display: none;
+	/* position: relative; */
+	/* margin: 35px auto 0; */
+	/* width: 300px; */
+	/* height: 134px; */
+	/* background-color: #533557; */
+	/* overflow: hidden; */
+  }
+  /* Toggle Functionality */
+  #toggle {
+	display: none;
+  }
+  #toggle:checked ~ .toggle-container .button-toggle {
+	/* box-shadow: 0 0 0 550px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1); */
+  }
+  #toggle:checked ~ .toggle-container .button-toggle:before {
+	transform: translateY(-50%) rotate(45deg) scale(1);
+  }
+  #toggle:checked ~ .toggle-container .button-toggle:after {
+	transform: translateY(-50%) rotate(-45deg) scale(1);
+  }
+  #toggle:checked ~ .nav {
+	/* margin-bottom: 100px; */
+	pointer-events: auto;
+	/* background-color: blue; */
+	/* height: 100vh; */
+	/* position: absolute; */
+	top: 50%;
+	left: 50%;
+	transform: translate(25%, 50%);
+  }
+  #toggle:checked ~ .nav .nav-item {
+	color: #127678;
+	letter-spacing: 0;
+	height: 40px;
+	line-height: 40px;
+	margin-top: 0;
+	opacity: 1;
+	transform: scaleY(1);
+	transition: 0.5s, opacity 0.1s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(1) {
+	transition-delay: 0.15s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(1):before {
+	transition-delay: 0.15s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(2) {
+	transition-delay: 0.1s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(2):before {
+	transition-delay: 0.1s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(3) {
+	transition-delay: 0.05s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(3):before {
+	transition-delay: 0.05s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(4) {
+	transition-delay: 0s;
+  }
+  #toggle:checked ~ .nav .nav-item:nth-child(4):before {
+	transition-delay: 0s;
+  }
+  #toggle:checked ~ .nav .nav-item:before {
+	opacity: 0;
+  }
+
+  /* Toggle Button */
+  .button-toggle {
+	position: absolute;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin: 25px;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	border-radius: 100%;
+	transition: 0.6s;
+  }
+  .button-toggle:hover {
+	/* box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1); */
+  }
+  .button-toggle:before, .button-toggle:after {
+	position: absolute;
+	content: '';
+	top: 50%;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #127678;
+	border-radius: 5px;
+	transition: 0.5s;
+  }
+  .button-toggle:before {
+	transform: translateY(-50%) rotate(45deg) scale(0);
+  }
+  .button-toggle:after {
+	transform: translateY(50%) rotate(-45deg) scale(0);
+  }
+  /* Menu */
+  .nav {
+	display: inline-block;
+	width: 100vw;
+	margin: 25px 25px 20px;
+	pointer-events: none;
+	transition: 0.5s;
+  }
+  .nav-item {
+	position: relative;
+	display: inline-block;
+	float: left;
+	clear: both;
+	color: transparent;
+	font-size: 14px;
+	letter-spacing: -6.2px;
+	height: 7px;
+	line-height: 7px;
+	text-transform: uppercase;
+	white-space: nowrap;
+	transform: scaleY(0.2);
+	transition: 0.5s, opacity 1s;
+  }
+  .nav-item:nth-child(1) {
+	transition-delay: 0s;
+  }
+  .nav-item:nth-child(1):before {
+	transition-delay: 0s;
+  }
+  .nav-item:nth-child(2) {
+	transition-delay: 0.05s;
+  }
+  .nav-item:nth-child(2):before {
+	transition-delay: 0.05s;
+  }
+  .nav-item:nth-child(3) {
+	transition-delay: 0.1s;
+  }
+  .nav-item:nth-child(3):before {
+	transition-delay: 0.1s;
+  }
+  .nav-item:nth-child(4) {
+	transition-delay: 0.15s;
+  }
+  .nav-item:nth-child(4):before {
+	transition-delay: 0.15s;
+  }
+  .nav-item:nth-child(1) {
+	letter-spacing: -8px;
+  }
+  .nav-item:nth-child(2) {
+	letter-spacing: -7px;
+  }
+  .nav-item:nth-child(n + 4) {
+	letter-spacing: -8px;
+	margin-top: -7px;
+	opacity: 0;
+  }
+  .nav-item:before {
+	position: absolute;
+	content: '';
+	top: 50%;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #EC7263;
+	transform: translateY(-50%) scaleY(5);
+	transition: 0.5s;
+  }
+  
+  @media only screen and (max-width: 600px){
+	.ham{
+		display: block;
+	}
 }
