--- a/Family.css
+++ b/Family.css
@@ -1,16 +1,13 @@
-body {
-    /* min-height: 100vh; */
-    /* display: grid; */
-    /* place-content: start center; */
-    /* background: linear-gradient(#fff,#aaa,#fff); */
+body{
+    box-sizing: border-box;
 }
-article h1, article p {
+article h1, article .p {
     margin: 10px;
 }
 article h1 {
     font-size: 1.2rem;
 }
-article p {
+article .p {
     font-size: 0.9rem;
     line-height: 1.4;
 }
@@ -34,7 +31,7 @@ article p {
     height: 95vh;
     width: 50vw; */
 }
-.g p {
+.g .p {
     font: 0.8em monospace;
     /* position: static; */
     /* display: block; */
@@ -49,12 +46,12 @@ article p {
     box-sizing: border-box;
     text-align: center;
 }
-.g p:hover {
+.g .p:hover {
     /* background: rgba(0,0,0,0.5); */
     color: #eee;
     border-bottom: 0 none;
 }
-.g p .show {
+.g .p .show {
     display: block;
     position: absolute;
     top: 10%;
@@ -68,7 +65,7 @@ article p {
     clip-path: polygon(50% 0,50% 0,50% 100%,50% 100%,50% 0,50% 0,50% 100%,50% 100%);
     transition: clip-path 0.3s ease-in;
 }
-.g p .icon{
+.g .p .icon{
     width: 70%;
     /* height: 80%; */
     background-color: white;
@@ -76,7 +73,7 @@ article p {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
     /* border: 1px solid black; */
 }
-.g p:hover img, .g p img:hover {
+.g .p:hover img, .g .p img:hover {
     clip-path: polygon(50% 0,0 0,0 100%,50% 100%,50% 0,100% 0,100% 100%,50% 100%);
 }
 article {
@@ -86,12 +83,28 @@ article {
     filter: blur(3px);
 }
 .select{
-    display: flex;
-
+    display: flex;  
     width: 100%;
     height: 100%;
     text-align: center;
 }
 .g .select1 .adit{
     width : 10%;
+}
+
+@media only screen and (max-width: 600px){
+    .select{
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        
+    }
+    .g .select1 .adit{
+        width : 20%;
+    }
+    .g .select .p{
+        width: 25%;
+    }
+    .g .p .icon{
+        margin: 10px;
+    }
 }
