--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body{
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Montserrat", sans-serif;
+	/* position: relative; */
 }
 .bg{
 	position: absolute;
@@ -398,17 +399,17 @@ aside p {
 /* //////////////////////////////////////////////////////////////////////// */
 
 /* Basic Styles */
+
   a {
 	text-decoration: none;
   }
-  .ham {
-	display: none;
-	/* position: relative; */
-	/* margin: 35px auto 0; */
-	/* width: 300px; */
-	/* height: 134px; */
-	/* background-color: #533557; */
-	/* overflow: hidden; */
+  .container {
+	position: relative;
+	margin: 35px auto 0;
+	width: 300px;
+	height: 534px;
+	background-color: #533557;
+	overflow: hidden;
   }
   /* Toggle Functionality */
   #toggle {
@@ -424,23 +425,20 @@ aside p {
 	transform: translateY(-50%) rotate(-45deg) scale(1);
   }
   #toggle:checked ~ .nav {
-	/* margin-bottom: 100px; */
+	margin-bottom: 100px;
 	pointer-events: auto;
-	/* background-color: blue; */
-	/* height: 100vh; */
-	/* position: absolute; */
-/* 	top: 50%; */
-/* 	left: 50%; */
-	transform: translate(90%, 50%);
+	transform: translate(36vw, 50%);
   }
   #toggle:checked ~ .nav .nav-item {
 	color: #127678;
+	font-weight: bold;
 	letter-spacing: 0;
 	height: 40px;
 	line-height: 40px;
 	margin-top: 0;
 	opacity: 1;
 	transform: scaleY(1);
+	/* transform: translate(90%, 50%); */
 	transition: 0.5s, opacity 0.1s;
   }
   #toggle:checked ~ .nav .nav-item:nth-child(1) {
@@ -470,7 +468,12 @@ aside p {
   #toggle:checked ~ .nav .nav-item:before {
 	opacity: 0;
   }
-
+  #toggle:checked ~ .dummy-content {
+	padding-top: 30px;
+  }
+  #toggle:checked ~ .dummy-content:before {
+	background-color: rgba(0, 0, 0, 0.3);
+  }
   /* Toggle Button */
   .button-toggle {
 	position: absolute;
@@ -485,7 +488,7 @@ aside p {
 	transition: 0.6s;
   }
   .button-toggle:hover {
-	/* box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1); */
+	box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
   }
   .button-toggle:before, .button-toggle:after {
 	position: absolute;
@@ -507,7 +510,6 @@ aside p {
   /* Menu */
   .nav {
 	display: inline-block;
-/* 	width: 100vw; */
 	margin: 25px 25px 20px;
 	pointer-events: none;
 	transition: 0.5s;
@@ -569,13 +571,7 @@ aside p {
 	left: 0;
 	width: 100%;
 	height: 2px;
-	background-color: #EC7263;
+	background-color: #127678;
 	transform: translateY(-50%) scaleY(5);
 	transition: 0.5s;
   }
-  
-  @media only screen and (max-width: 600px){
-	.ham{
-		display: block;
-	}
-}
